# hybrid-chess-position-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py
app/cache/: cache_schema.sql  sqlite_cache.py
app/components/: charts.py  explanations.py  interactive_board.py  tables.py
app/core/: __init__.py  analysis.py  board_utils.py  config.py  game_stats.py  labeling.py  live_utils.py  pgn_utils.py  scoring.py
app/data_sources/: __init__.py  chesscom_api.py  lichess_api.py  lichess_explorer.py
app/engines/: __init__.py  eval_normalizer.py  stockfish_engine.py
app/models/: __init__.py  move_analysis.py  position_analysis.py
docs/: data_sources.md  interpretation.md  methodology.md
examples/: demo_data.json  example_positions.md  sample_fens.txt  sample_game.pgn
tests/: test_analysis.py  test_board_utils.py  test_game_stats.py  test_labeling.py  test_live_utils.py  test_pgn_utils.py  test_scoring.py  test_stockfish_engine.py
