[project]
name = "hybrid-chess-position-analyzer"
version = "0.1.0"
description = "Compare engine-best chess moves with historically effective human moves."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hybrid Chess Position Analyzer contributors" }]
dependencies = [
    "streamlit>=1.58",
    "python-chess>=1.999",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "black>=24.4", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
